--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 ﻿Исправить статус коды
+Избавиться от GodObject (разбить GameRepository на несколько сервисов, в соответствии c SRP)
 
 Добавить комнату выхода (победа)
 Добавить оружие (и броню?)
@@ -6,3 +7,9 @@
 
 Добавить боевую систему
 Добавить противников
+
+Реализовать сессии
+
+Добавить БД, Аутентификацию пользователей, Сохранение игр в БД.
+
+Тестирование
