Исправить статус коды. Исправить ответ при проигрыше.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
-﻿Исправить статус коды
-Избавиться от GodObject (разбить GameRepository на несколько сервисов, в соответствии c SRP)
+﻿Избавиться от GodObject (разбить GameRepository на несколько сервисов, в соответствии c SRP)
 
 Добавить комнату выхода (победа)
 Добавить оружие (и броню?)
