Реализовать глобальный обработчик исключений. НЕ РАБОТАЕТ.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
-﻿Избавиться от GodObject (разбить GameRepository на несколько сервисов, в соответствии c SRP)
+﻿Вынести общие исключения из контроллеров
+Избавиться от GodObject (разбить GameRepository на несколько сервисов, в соответствии c SRP)
 
 Добавить комнату выхода (победа)
 Добавить оружие (и броню?)
