--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
-﻿Вынести общие исключения из контроллеров
-Избавиться от GodObject (разбить GameRepository на несколько сервисов, в соответствии c SRP)
+﻿Избавиться от GodObject (разбить GameRepository на несколько сервисов, в соответствии c SRP)
 
 Добавить комнату выхода (победа)
 Добавить оружие (и броню?)
@@ -13,3 +12,5 @@
 Добавить БД, Аутентификацию пользователей, Сохранение игр в БД.
 
 Тестирование
+
+(Возможно) Исправить вывод в консоль предвиденных ошибок
