Реализовать генерацию карты при старте игры. Добавить стартовую комнату. Исправить переход в следующую комнату. Добавить свойство в комнату, отвечающее за возможность перехода в неё. Объединить контроллеры Game и Player.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 ﻿Избавиться от GodObject (разбить GameRepository на несколько сервисов, в соответствии c SRP)
 
 Добавить комнату выхода (победа)
+Добавить карту
 Добавить оружие (и броню?)
 Добавить магазин
 
