--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-﻿Избавиться от GodObject (разбить GameRepository на несколько сервисов, в соответствии c SRP)
+﻿Исправить баг с подбором предметов
 
 Добавить комнату выхода (победа)
 Добавить карту
