--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
-﻿Исправить баг с подбором предметов
-
-Добавить комнату выхода (победа)
+﻿Добавить комнату выхода (победа)
 Добавить карту
 Добавить оружие (и броню?)
 Добавить магазин
