--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
-﻿Добавить магазин
+﻿Добавить боевую систему
 
-Добавить боевую систему
-Добавить противников
+Добавить магазин
 
 Реализовать сессии
 
