--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,10 @@
 
 Добавить магазин
 
+Оптимизировать код. Убрать ItemTypes, string? Name и Description. Ну короче вылизать.
+
+Баланс
+
 Реализовать сессии
 
 Добавить БД, Аутентификацию пользователей, Сохранение игр в БД.
