--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,7 @@
 
 Добавить магазин
 
-Оптимизировать код. Убрать ItemTypes, string? Name и Description. Ну короче вылизать.
+Оптимизировать код. Убрать ItemTypes, Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
 
 Баланс
 
