Добавить эндпоинты для взаимодействия с предеметами лечения.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
-﻿Использование хила
-
-Добавить магазин
+﻿Добавить магазин
 
 Оптимизировать код. Убрать ItemTypes, Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
 
