--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,22 @@
-﻿Добавить магазин
+﻿Добавить в BattleLog данные об атакующем
+Отображение экипировки в GetGameInfo
+Убрать isCarryable из ItemDTO и наследников
+Информацию про текущую комнату перенести из game в room контроллер
+Переименовать в rooms
+Проверка комнаты на исследованность
+Вывод GameInfo после победы над мобом
+
+Добавить магазин
 
 Оптимизировать код. Убрать ItemTypes, Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
 
-Баланс
+Баланс:
+	-Увеличить здоровье мобам и игроку. Соотсветственно увеличить лечение от предметов.
+	-Улучшить распределение мобов по комнатам. Чтобы не встречались сильные мобы в начальных комнатах.
+	-Ускорить усиление мобов.
+	-Начальные предметы в стартовой комнате?
+	-Уменьшить количество оружия и брони. Но брони должно быть больше чем оружия. Терпите, суки.
+	-Ослабить экипировку.
 
 Реализовать сессии
 
@@ -10,4 +24,6 @@
 
 Тестирование
 
-(Возможно) Исправить вывод в консоль предвиденных ошибок
+(Возможно) 
+Исправить вывод в консоль предвиденных ошибок
+Добавить каменную маску, превращающую в вампира. Изменение статов игрока. +Зелье излечения, чтобы выйти.
