Добавить в BattleLog данные об атакующем. Добавить проверку на здоровье игрока после атаки. Обновить TODO.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,12 @@
-﻿Добавить в BattleLog данные об атакующем
+﻿Вывод GameInfo после победы над мобом
 Отображение экипировки в GetGameInfo
+
+Исправить рассчёт мультипликаторов
+
 Убрать isCarryable из ItemDTO и наследников
 Информацию про текущую комнату перенести из game в room контроллер
 Переименовать в rooms
 Проверка комнаты на исследованность
-Вывод GameInfo после победы над мобом
 
 Добавить магазин
 
