Вывод BattleLog после победы над мобом.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
-﻿Вывод GameInfo после победы над мобом
-Отображение экипировки в GetGameInfo
-
+﻿Отображение экипировки в GetGameInfo
 Исправить рассчёт мультипликаторов
 
 Убрать isCarryable из ItemDTO и наследников
@@ -29,3 +27,6 @@
 (Возможно) 
 Исправить вывод в консоль предвиденных ошибок
 Добавить каменную маску, превращающую в вампира. Изменение статов игрока. +Зелье излечения, чтобы выйти.
+
+Задачи фронтэнда
+	-Уведомление игрока о поломке экипировки
