Исправить отображение экипировки в GetGameInfo.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
-﻿Отображение экипировки в GetGameInfo
-Исправить рассчёт мультипликаторов
+﻿Исправить рассчёт мультипликаторов
 
 Убрать isCarryable из ItemDTO и наследников
 Информацию про текущую комнату перенести из game в room контроллер
@@ -27,6 +26,7 @@
 (Возможно) 
 Исправить вывод в консоль предвиденных ошибок
 Добавить каменную маску, превращающую в вампира. Изменение статов игрока. +Зелье излечения, чтобы выйти.
+Мимики создаются не при создании сундука, а при ударе по нему. => id не соответствует.
 
 Задачи фронтэнда
 	-Уведомление игрока о поломке экипировки
