Исправить рассчёт мультипликаторов. Добавить зелья в активный пул.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
-﻿Исправить рассчёт мультипликаторов
-
-Убрать isCarryable из ItemDTO и наследников
+﻿Убрать isCarryable из ItemDTO и наследников
 Информацию про текущую комнату перенести из game в room контроллер
 Переименовать в rooms
 Проверка комнаты на исследованность
