--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,19 @@
-﻿Добавить магазин
+﻿Убрать isCarryable из ItemDTO и наследников
+Информацию про текущую комнату перенести из game в room контроллер
+Переименовать в rooms
+Проверка комнаты на исследованность
 
-Добавить боевую систему
-Добавить противников
+Добавить магазин
+
+Оптимизировать код. Убрать ItemTypes, Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
+
+Баланс:
+	-Увеличить здоровье мобам и игроку. Соотсветственно увеличить лечение от предметов.
+	-Улучшить распределение мобов по комнатам. Чтобы не встречались сильные мобы в начальных комнатах.
+	-Ускорить усиление мобов.
+	-Начальные предметы в стартовой комнате?
+	-Уменьшить количество оружия и брони. Но брони должно быть больше чем оружия. Терпите, суки.
+	-Ослабить экипировку.
 
 Реализовать сессии
 
@@ -9,4 +21,10 @@
 
 Тестирование
 
-(Возможно) Исправить вывод в консоль предвиденных ошибок
+(Возможно) 
+Исправить вывод в консоль предвиденных ошибок
+Добавить каменную маску, превращающую в вампира. Изменение статов игрока. +Зелье излечения, чтобы выйти.
+Мимики создаются не при создании сундука, а при ударе по нему. => id не соответствует.
+
+Задачи фронтэнда
+	-Уведомление игрока о поломке экипировки
