--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
-﻿Убрать isCarryable из ItemDTO и наследников
-Информацию про текущую комнату перенести из game в room контроллер
+﻿Информацию про текущую комнату перенести из game в room контроллер
 Переименовать в rooms
 Проверка комнаты на исследованность
 
