Информацию про текущую комнату перенести из game в room контроллер. Переименовать в rooms.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
-﻿Информацию про текущую комнату перенести из game в room контроллер
-Переименовать в rooms
-Проверка комнаты на исследованность
+﻿Проверка комнаты на исследованность
 
 Добавить магазин
 
