Добавить проверку комнаты на исследованность.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,4 @@
-﻿Проверка комнаты на исследованность
-
-Добавить магазин
-
-Оптимизировать код. Убрать ItemTypes, Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
+﻿Добавить магазин
 
 Баланс:
 	-Увеличить здоровье мобам и игроку. Соотсветственно увеличить лечение от предметов.
@@ -11,6 +7,8 @@
 	-Начальные предметы в стартовой комнате?
 	-Уменьшить количество оружия и брони. Но брони должно быть больше чем оружия. Терпите, суки.
 	-Ослабить экипировку.
+
+Оптимизировать код. Убрать ItemTypes, Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
 
 Реализовать сессии
 
