--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,9 @@
-﻿Добавить магазин
+﻿Добавить магазин:
+	-Создать класс
+	-Создать интерфейс
+	-Создать класс интерфейса
+	-Создать эндпоинты
+	-Включить в пул комнат
 
 Баланс:
 	-Увеличить здоровье мобам и игроку. Соотсветственно увеличить лечение от предметов.
@@ -8,7 +13,7 @@
 	-Уменьшить количество оружия и брони. Но брони должно быть больше чем оружия. Терпите, суки.
 	-Ослабить экипировку.
 
-Оптимизировать код. Убрать ItemTypes, Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
+Оптимизировать код. Убрать ItemTypes. Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
 
 Реализовать сессии
 
