Создать класс. Добавить новую реализацию в ItemFactory.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,10 @@
 ﻿Добавить магазин:
-	-Создать класс
+	-Создать систему для экономики
+		-Добавить предметам поле стоимости
+		-Добавить рассчёт этой стоимости
 	-Создать интерфейс
 	-Создать класс интерфейса
+	-Добавить ограничения других эндпоинтов
 	-Создать эндпоинты
 	-Включить в пул комнат
 
