Добавить поле стоимость в предметы. Добавить рассчёт стоимости предметов. Оптимизировать классы экипировки.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 ﻿Добавить магазин:
 	-Создать систему для экономики
-		-Добавить предметам поле стоимости
-		-Добавить рассчёт этой стоимости
+		-Переделать класс Coin в BagOfCoins
+	-Изменить DTO предметов
 	-Создать интерфейс
 	-Создать класс интерфейса
 	-Добавить ограничения других эндпоинтов
@@ -16,7 +16,7 @@
 	-Уменьшить количество оружия и брони. Но брони должно быть больше чем оружия. Терпите, суки.
 	-Ослабить экипировку.
 
-Оптимизировать код. Убрать ItemTypes. Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
+Оптимизировать код. Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
 
 Реализовать сессии
 
