Создать эндпоинты связанные с магазином. Исправить баги.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,4 @@
-﻿Добавить магазин:
-	-Создать эндпоинты
-	-Включить в пул комнат
-
-Баланс:
+﻿Баланс:
 	-Увеличить здоровье мобам и игроку. Соотсветственно увеличить лечение от предметов.
 	-Улучшить распределение мобов по комнатам. Чтобы не встречались сильные мобы в начальных комнатах.
 	-Ускорить усиление мобов.
