--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,12 @@
-﻿Убрать isCarryable из ItemDTO и наследников
-Информацию про текущую комнату перенести из game в room контроллер
-Переименовать в rooms
-Проверка комнаты на исследованность
-
-Добавить магазин
-
-Оптимизировать код. Убрать ItemTypes, Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
-
-Баланс:
+﻿Баланс:
 	-Увеличить здоровье мобам и игроку. Соотсветственно увеличить лечение от предметов.
 	-Улучшить распределение мобов по комнатам. Чтобы не встречались сильные мобы в начальных комнатах.
 	-Ускорить усиление мобов.
 	-Начальные предметы в стартовой комнате?
 	-Уменьшить количество оружия и брони. Но брони должно быть больше чем оружия. Терпите, суки.
 	-Ослабить экипировку.
+
+Оптимизировать код. Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
 
 Реализовать сессии
 
