Обновить файл баланса и TODO.

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,7 @@
 	-Уменьшить количество оружия и брони. Но брони должно быть больше чем оружия. Терпите, суки.
 	-Ослабить экипировку.
 
+На карте отображаются предметы из исследованных комнат.
 Оптимизировать код. Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
 
 Реализовать сессии
