Исправить баг с характеристиками предметов лечения. Убрать разброс стоимости ключей.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,6 @@
-﻿Баланс:
-	-Увеличить здоровье мобам и игроку. Соотсветственно увеличить лечение от предметов.
-	-Улучшить распределение мобов по комнатам. Чтобы не встречались сильные мобы в начальных комнатах.
-	-Ускорить усиление мобов.
-	-Начальные предметы в стартовой комнате?
-	-Уменьшить количество оружия и брони. Но брони должно быть больше чем оружия. Терпите, суки.
-	-Ослабить экипировку.
+﻿Убрать разброс стоимости ключей.
+Добавить отображение второго поля урона в BattleLog.
+
 
 На карте отображаются предметы из исследованных комнат.
 Оптимизировать код. Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
@@ -18,7 +14,6 @@
 (Возможно) 
 Исправить вывод в консоль предвиденных ошибок
 Добавить каменную маску, превращающую в вампира. Изменение статов игрока. +Зелье излечения, чтобы выйти.
-Мимики создаются не при создании сундука, а при ударе по нему. => id не соответствует.
 
 Задачи фронтэнда
 	-Уведомление игрока о поломке экипировки
