Исправить лог битвы.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
-﻿Убрать разброс стоимости ключей.
-Добавить отображение второго поля урона в BattleLog.
-
+﻿Переделать поля в свойства.
 
 На карте отображаются предметы из исследованных комнат.
 Оптимизировать код. Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
@@ -13,7 +11,6 @@
 
 (Возможно) 
 Исправить вывод в консоль предвиденных ошибок
-Добавить каменную маску, превращающую в вампира. Изменение статов игрока. +Зелье излечения, чтобы выйти.
 
 Задачи фронтэнда
 	-Уведомление игрока о поломке экипировки
