Исправить именование сервисов.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
-﻿Переделать поля в свойства.
-
-На карте отображаются предметы из исследованных комнат.
+﻿На карте отображаются предметы из исследованных комнат.
 Оптимизировать код. Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
 
 Реализовать сессии
