--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,7 @@
-﻿На карте отображаются предметы из исследованных комнат.
+﻿Заменить _random на Random.Shared.
+Убрать лишний аргумент при создании комнат.
+
+На карте отображаются предметы из исследованных комнат.
 Оптимизировать код. Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
 
 Реализовать сессии
