Заменить _random на Random.Shared.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
-﻿Заменить _random на Random.Shared.
-Убрать лишний аргумент при создании комнат.
+﻿Убрать лишний аргумент при создании комнат.
 
 На карте отображаются предметы из исследованных комнат.
 Оптимизировать код. Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
@@ -11,7 +10,8 @@
 Тестирование
 
 (Возможно) 
-Исправить вывод в консоль предвиденных ошибок
+Воспроизводимость Random через seed.
+Исправить вывод в консоль предвиденных ошибок.
 
 Задачи фронтэнда
 	-Уведомление игрока о поломке экипировки
