Разделить создание комнат и их содержимого.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 ﻿На карте отображаются предметы из исследованных комнат.
+Игровая статистика в конце игры.
 Оптимизировать код. Типы данных. Модификаторы доступа. Зависимости. Архитектура. Ну короче вылизать всё.
 
 Реализовать сессии
