--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@
 
 Реализовать сессии
 
-Добавить БД, Аутентификацию пользователей, Сохранение игр в БД.
+Добавить БД, Аутентификацию пользователей, Сохранение игр в БД, Кеширование.
 
 Тестирование
 
